Try Building with Java Code